cleaning out some old files

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -80,7 +80,7 @@
           <div class="creative-commons">
           {% if site.creative-commons %}
           <p>
-          Except where otherwise indicated, the content of this site is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>. <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a>
+          Except where otherwise indicated, the content of this site is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>. <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a>
           </p>
           {% endif %}
           <p>Any opinions expressed on this site are not those of any organisation or group I am associated with, and are not necessarily even my own opinions.</p>
