updating css for bibliographies

--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,10 @@ p {
   font-size:11px;
 }
 
+.bibliography a {
+color: #008AFF;
+}
+
 p a {
   /* text-decoration: underline */
   color: #008AFF;
