--- a/_layouts/bibliography.html
+++ b/_layouts/bibliography.html
@@ -2,27 +2,10 @@
 ---
 {{reference}}
 
-<div id="{{key}}-materials">
-  <ul class="nav nav-pills">
-    {% if entry.abstract %}
-    <li><a data-toggle="collapse" href="#{{key}}-abstract">Abstract</a></li>
+    {% if entry.url %}
+    <a href="{{entry.url}}" target="_blank" >{{entry.url}}</a>
     {% endif %}
 
-    <li><a data-toggle="collapse" href="javascript:toggleDiv('{{key}}-bibtex')">BibTeX</a></li>
-    <div id="{{key}}-bibtex" style="display:none;">
-    <pre class="collapse">{{entry.bibtex}}</pre>
-    </div>
-
-    {% if link %}
-    <li><a href="{{link}}">Download</a></li>
-    {% endif %}
     {% if entry.doi %}
-    <li>DOI: <a href="http://dx.doi.org/{{entry.doi}}">{{entry.doi}}</a></li>
+    DOI: <a href="https://dx.doi.org/{{entry.doi}}" target="_blank" >{{entry.doi}}</a>
     {% endif %}
-  </ul>
-
-  {% if entry.abstract %}
-  <p id="{{key}}-abstract" class="collapse">{{entry.abstract}}</p>
-  {% endif %}
-
-</div>
