--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,25 @@ p {
   font-size:11px;
 }
 
+
+.cvwrapper {
+  margin-left: 200px;
+}
+.cvcontent {
+  float: right;
+  width: 100%;
+  background-color: #CCF;
+}
+.cvsidebar {
+  float: left;
+  width: 200px;
+  margin-left: -200px;
+  background-color: #FFA;
+}
+.cvcleared {
+  clear: both;
+}
+
 .bibliography {
   list-style:none;
   padding-left:0;
@@ -63,6 +82,7 @@ p {
   padding-right: 30px;
   text-indent: 0px ;
 }
+
 
 
 p a {
