--- a/css/main.css
+++ b/css/main.css
@@ -249,6 +249,12 @@ img {
   height: 40px;
 }
 
+.navbar-right {
+    float: right !important;
+    margin-right: 5px;
+}
+
+
 @media only screen and (min-width: 768px) {
   .navbar-custom {
     padding: 20px 0;
