--- a/css/main.css
+++ b/css/main.css
@@ -381,6 +381,14 @@ img {
 
 /* --- Footer --- */
 
+.bikeframe{
+  border: none;
+  width: 100%;
+  height: 2870px;
+}
+
+
+
 footer {
   width:100%;
   height:130px;
@@ -418,6 +426,12 @@ footer {
       padding-top: 40px;
       padding-left: 0px;
       padding-right: 0px;
+  }
+
+  .bikeframe{
+    border: none;
+    width: 100%;
+    height: 2950px;
   }
 
 }
