--- a/css/main.css
+++ b/css/main.css
@@ -403,6 +403,13 @@ img {
   }
 }
 
+@media only screen and (max-width: 600px) {
+  .bikeframe{
+    border: none;
+    width: 100%;
+    height: 3610px;
+  }
+}
 
 /* --- Footer --- */
 
