--- a/themes/beautifulhugo/layouts/partials/header.html
+++ b/themes/beautifulhugo/layouts/partials/header.html
@@ -31,7 +31,7 @@
                       <h2 class="{{ .Type }}-subheading">{{ $subtitle }}</h2>
                     {{ end }}
                   {{ end }}
-                  {{ if eq .Type "post" }}
+                  {{ if eq .Type "blog" }}
                     {{ partial "post_meta.html" . }}
                   {{ end }}
               </div>
@@ -56,7 +56,7 @@
                     <h2 class="{{ .Type }}-subheading">{{ $subtitle }}</h2>
                   {{ end }}
                 {{ end }}
-                {{ if eq .Type "post" }}
+                {{ if eq .Type "blog" }}
                   {{ partial "post_meta.html" . }}
                 {{ end }}
             </div>
