--- a/themes/beautifulhugo/layouts/partials/footer.html
+++ b/themes/beautifulhugo/layouts/partials/footer.html
@@ -42,16 +42,13 @@
       </span>
     </a>
   </li>
-
-
         </ul>
 
 <div class="credits text-muted">
 <div class="creative-commons">
-  <p>Any opinions expressed on this site are not those of any organisation or group I am associated with, and are not necessarily even my own opinions.</p>
-<p>
-Except where otherwise indicated, the content of this site is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>. <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a>
-</p>
+  <p>Any opinions expressed on this site are not necessarily those of any organisation or group I am associated with, and are not necessarily even my own opinions.</p>
+
+<p>Except where otherwise indicated, the content of this site is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>. <a rel="license" href="https://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a></p>
 
 </div>
 <p class="credits theme-by text-muted">
