--- a/static/css/codeblock.css
+++ b/static/css/codeblock.css
@@ -1,9 +1,9 @@
 /* --- Code blocks --- */
 
-pre {
-  font-size: 16px;
+/*pre {
+   font-size: 16px; 
   line-height: 1.5em;
-}
+} */
 pre code {
   white-space: pre;
 }
