--- a/themes/beautifulhugo/layouts/partials/head.html
+++ b/themes/beautifulhugo/layouts/partials/head.html
@@ -54,7 +54,10 @@
   <link rel="stylesheet" href="{{ "academicons/css/academicons.css" | absURL }}" />
   <link rel="stylesheet" href="{{ "css/codeblock.css" | absURL }}" />
   {{- if (not ( .Site.Params.UseChroma )) }}
-  <link rel="stylesheet" href="{{ "css/highlight.min.css" | absURL }}" />
+ <!-- <link rel="stylesheet" href="{{ "css/highlight.min.css" | absURL }}" /> -->
+  <link rel="stylesheet" href="{{"css/github.css" | absURL}}" rel="stylesheet" id="theme-stylesheet">
+  <script src="{{ "js/highlight.pack.js" | absURL }}"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
   {{- else -}}
   <link rel="stylesheet" href="{{ "css/syntax.css" | absURL }}" />
   {{- end -}}
