--- a/themes/beautifulhugo/layouts/partials/footer.html
+++ b/themes/beautifulhugo/layouts/partials/footer.html
@@ -55,15 +55,13 @@
   {{ i18n "poweredBy" . | safeHTML }}
   {{ with .Site.Params.commit }}&nbsp;&bull;&nbsp;[<a href="{{.}}{{ getenv "GIT_COMMIT_SHA" }}">{{ getenv "GIT_COMMIT_SHA_SHORT" }}</a>]{{ end }} and further modified by <a href="https://evanodell.com">Evan Odell</a>.
 &nbsp;&bull;&nbsp;
-2015 -- {{ .Site.LastChange.Format "2006" }}
+2015 &ndash {{ .Site.LastChange.Format "2006" }}
 <!--
 {{ if .Site.Title }}
 &nbsp;&bull;&nbsp;
 <a href="{{ "" | absLangURL }}">{{ .Site.Title }}</a>
 {{ end }}-->
 </p>
-
-
 
       </div>
     </div>
