--- a/themes/beautifulhugo/layouts/partials/footer.html
+++ b/themes/beautifulhugo/layouts/partials/footer.html
@@ -20,7 +20,7 @@
   </li>
 
   <li>
-    <a href="mailto:evanodell91@gmail.com" title="Email me" target="_blank">
+    <a href="mailto:evan@evanodell.com" title="Email me" target="_blank">
     <span class="fa-stack fa-1x">
       <i class="fas fa-envelope fa-stack-1x fa-inverse"></i>
     </span>
