de-italicise quotes

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -127,7 +127,7 @@ a:focus {
 }
 blockquote {
   color: #808080;
-  font-style: italic;
+/*  font-style: italic; */
 }
 blockquote p:first-child {
   margin-top: 0;
