--- a/static/css/main.css
+++ b/static/css/main.css
@@ -43,7 +43,7 @@ p {
 }
 
 .creative-commons{
-  font-size:10px;
+  font-size:14px;
   text-align: center;
 }
 
@@ -453,7 +453,7 @@ img {
 
 footer {
   width:100%;
-  height:125px;
+  height:250px;
   position: absolute;
   padding: 5px 0;
   background: #12181E;
@@ -469,11 +469,17 @@ footer {
     padding-left: 0px;
     padding-right: 0px;
 }
+
+  footer .footer-links {
+   font-size: 34px;
+   margin-bottom: 2px;
+  }
+
 @media only screen and (max-width: 980px) {
 
   footer {
     width:100%;
-    height:130px;
+    height:260px;
     position: absolute;
     padding: 5px 0;
     background: #12181E;
@@ -498,13 +504,18 @@ footer {
 
   footer {
     width:100%;
-    height:140px;
+    height:280px;
     position: absolute;
     padding: 5px 0;
     background: #12181E;
     border-top: 1px #EAEAEA solid;
     margin-top: 5px;
     font-size: 14px;
+  }
+  
+  footer .footer-links {
+   font-size: 16px;
+   margin-bottom: 2px;
   }
 
   #main-wrapper {
@@ -520,7 +531,7 @@ footer {
 
   footer {
     width:100%;
-    height:150px;
+    height:275px;
     position: absolute;
     padding: 5px 0;
     background: #12181E;
@@ -549,7 +560,7 @@ footer a {
 
 footer .text-muted {
   color: #e8e8e8;
-  font-size: 10px;
+  font-size: 14px;
 }
 
 .list-inline > li {
@@ -571,19 +582,16 @@ footer .copyright {
   font-family: Roboto;
   text-align: center;
   margin-bottom: 0;
-  font-size: 10px;
-}
-footer .theme-by {
-  text-align: center;
+  font-size: 14px;
 }
 
 @media only screen and (min-width: 768px) {
   footer .footer-links {
-   font-size: 26px;
+   font-size: 34px;
    margin-bottom: 2px;
   }
   footer .copyright {
-    font-size: 10px;
+    font-size: 14px;
   }
 }
 
