--- a/themes/beautifulhugo/layouts/index.html
+++ b/themes/beautifulhugo/layouts/index.html
@@ -6,40 +6,11 @@
             {{.}}
         {{ end }}
 
+
         <div class="posts-list">
-          {{ $pag := .Paginate (where .Data.Pages "Type" "blog") 1 }}
+          {{ $pag := .Paginate (where site.RegularPages "Type" "in" site.Params.mainSections) 1 }}
           {{ range $pag.Pages }}
-            <article class="post-preview">
-              <a href="{{ .Permalink }}">
-                <h2 class="post-title">{{ .Title }}</h2>
-                {{ if .Params.subtitle }}
-                  <h3 class="post-subtitle">
-                  {{ .Params.subtitle }}
-                  </h3>
-                {{ end }}
-              </a>
-
-              {{ partial "post_meta.html" . }}
-              <div class="post-entry">
-              {{ if .Params.image }}
-                <img src="{{ .Params.image }}" class="post-image img-rounded" />
-                {{ end }}
-                {{ if .Truncated }}
-                  {{ .Summary }}
-                  <a href="{{ .Permalink }}" class="post-read-more">[{{ i18n "readMore" }}]</a>
-                {{ else }}
-                  {{ .Content }}
-                {{ end }}
-              </div>
-
-              {{ if .Params.tags }}
-                <span class="post-meta">
-                {{ range .Params.tags }}
-                  #<a href="{{ $.Site.LanguagePrefix | absURL }}/tags/{{ . | urlize }}/">{{ . }}</a>&nbsp;
-                {{ end }}
-                </span>
-              {{ end }}
-            </article>
+            {{ partial "post_preview" . }}
           {{ end }}
         </div>
 
