--- a/themes/beautifulhugo/layouts/partials/post_meta.html
+++ b/themes/beautifulhugo/layouts/partials/post_meta.html
@@ -11,7 +11,7 @@
   {{ end }}
   {{- if .Site.Params.staticman -}}
     &nbsp;|&nbsp;  <i class="fa fa-comment-o"></i>
-    {{ $slug := replace .URL "/" "" }}
+    {{ $slug := replace .Permalink "/" "" }}
     {{ $comments := index $.Site.Data.comments $slug }}
     {{ if $comments }}
       {{ if gt (len $comments) 1  }}
