--- a/themes/beautifulhugo/layouts/partials/post_preview.html
+++ b/themes/beautifulhugo/layouts/partials/post_preview.html
@@ -7,7 +7,7 @@
         </h3>
         {{ end }}
         {{ if .Params.image }}
-        <img src="{{ .Params.image }}" alt="{{ .Title }}" class="img-title" />
+        <img src="{{ .Params.image }}" alt="{{ .Title }}" class="post-image img-rounded" />
         {{ end }}
         {{ if .Params.video }}
         <video loop autoplay muted playsinline class="img-title">
