remove deprecated elements, add strava link

--- a/themes/beautifulhugo/layouts/partials/footer.html
+++ b/themes/beautifulhugo/layouts/partials/footer.html
@@ -42,6 +42,14 @@
       </span>
     </a>
   </li>
+  
+    <li>
+    <a href="https://www.strava.com/athletes/evanodell" title="Strava" target="_blank">
+      <span class="fa-stack fa-inverse">
+        <i class="fab fa-strava fa-stack-1x fa-inverse"></i>
+      </span>
+    </a>
+  </li>
         </ul>
 
 <div class="credits text-muted">
