--- a/themes/beautifulhugo/layouts/partials/post_preview.html
+++ b/themes/beautifulhugo/layouts/partials/post_preview.html
@@ -21,7 +21,7 @@
     </p>
     <div class="post-entry">
         {{ if .Truncated }}
-        {{ .Summary }}
+        {{ .Summary | safeHTML }}
         <a href="{{ .Permalink }}" class="post-read-more">[{{ i18n "readMore" }}]</a>
         {{ else }}
         {{ .Content }}
